# octave-image

./: .hgignore  COPYING  DESCRIPTION  HACKING  INDEX  MakeShears.m  Makeconf.add  Makefile  NEWS  PKG_ADD  __imagemagick__.cc  applylut.m  autumn.m  bestblk.m  blkproc.m  bmpwrite.m  bone.m  bootstrap  brighten.m  bwarea.m  bwborder.m  bweuler.m  bwfill.cc  bwlabel.cc  bwlabel.m  bwmorph.m  bwselect.m  cmpermute.m  cmunique.m  col2im.m  colfilt.m  colorgradient.m  configure.add  conndef.m  conv2.cc  cool.m  copper.m  cordflt2.cc  dilate.m  edge.m  (+55 more)
devel/: README  __bridge_lut_fun__.m  __conditional_mark_patterns_lut_fun__.m  __diagonal_fill_lut_fun__.m  __endpoints_fun__.m  __thin_fun1__.m  __thin_fun2__.m  __unconditional_mark_patterns_lut_fun__.m  deriche.cc
inst/: analyze75info.m  analyze75read.m  analyze75write.m  applylut.m  autumn.m  bestblk.m  blkproc.m  blockproc.m  bmpwrite.m  bone.m  brighten.m  bwarea.m  bwborder.m  bwboundaries.m  bwconncomp.m  bwcount.m  bwdist.m  bweuler.m  bwhitmiss.m  bwlabel.m  bwmorph.m  bwpack.m  bwperim.m  bwpropfilt.m  bwselect.m  bwunpack.m  checkerboard.m  cmpermute.m  cmunique.m  col2im.m  colfilt.m  colorangle.m  colorgradient.m  conndef.m  cool.m  copper.m  cordflt2.m  corr2.m  cp2tform.m  deconvwnr.m  (+138 more)
inst/@imref2d/: contains.m  disp.m  imref2d.m  intrinsicToWorld.m  sizesMatch.m  subsasgn.m  subsref.m  worldToIntrinsic.m  worldToSubscript.m
inst/@imref3d/: contains.m  disp.m  imref3d.m  intrinsicToWorld.m  subsasgn.m  subsref.m  worldToIntrinsic.m  worldToSubscript.m
inst/@strel/: display.m  getheight.m  getneighbors.m  getneightbors.m  getsequence.m  isflat.m  reflect.m  strel.m
inst/private/: analyze75filename.m  imarithmetics.m  isimage.m  istform.m  make_conn.m  pad_for_spatial_filter.m  ycbcrfunc.m
src/: Makeconf.add  Makeconf.in  Makefile  Makefile.in  __bilateral__.cc  __boundary__.cc  __bwdist.cc  __bwdist__.cc  __cordfltn__.cc  __custom_gaussian_smoothing__.cc  __imboundary__.cc  __magick_read__.cc  __spatial_filtering__.cc  autogen.sh  bwconncomp.cc  bwdist.cc  bwfill.cc  bwlabel.cc  bwlabeln.cc  config.h.in  configure.ac  configure.base  conndef.cc  conndef.h  connectivity.cc  connectivity.h  cordflt2.cc  deriche.cc  edtfunc.c  graycomatrix.cc  hough_line.cc  houghtf.cc  imerode.cc  imreconstruct.cc  intlut.cc  jpgread.cc  jpgwrite.cc  nonmax_supress.cc  octave-wrappers.h  pngcanvas.h  (+8 more)
src/admin/: CONTENTS  OctRe.pm  change_va_arg.pm  find_changes  get_authors  get_contents  make_index  mkdoc  mkpkgadd  mktests.sh  mktexi  no_vr_val.pm  octlink.sh  run_forge  template.ndev  template.readme
src/m4/: prog_cxx.m4
